--- a/views/user_input.erb
+++ b/views/user_input.erb
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Pig Latinize!</title>
+    <title>Pig Latinizer!</title>
   </head>
   <body>
     <h1>Pig Latinizer</h1>
